--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         .loading-box {
             height: var(--loading-heigth);
             width: var(--loading-width);
-            background-color: blueviolet;
+            background-color: #0061FF;
             /* background-color: aliceblue; */
             /* animation: loading 5s delay iteration-count direction fill-mode;; */
             animation: loading 5s;
